--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,5 @@ version = "0.1.0"
 edition = "2018"
 
 [dependencies]
-serde = { version = "1.0.126", features = ["derive"] }
-num-traits = "0.2.14"
+serde = { version = "^1.0", features = ["derive"] }
+num-traits = "^0.2"
