--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "grid-geom-util"
 version = "0.1.0"
-edition = "2018"
+authors = [ "WeaverTVSC <weaver.imaginarium@proton.me>" ]
+edition = "2021"
 
 [dependencies]
 serde = { version = "^1.0", features = ["derive"] }
