--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,7 @@ edition = "2021"
 
 [dependencies]
 serde = { version = "^1.0", features = ["derive"] }
-num-traits = "^0.2"
+num = "^0.4"
+
+[dev-dependencies]
+itertools = "^0.10"
