--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "grid-geom-util"
 version = "0.1.0"
-authors = [ "WeaverTVSC <weaver.imaginarium@proton.me>" ]
+authors = [ "Tuulikki Unelma" ]
 edition = "2021"
 
 [dependencies]
