--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "grid-geom-util"
 version = "0.1.0"
-authors = [ "Tuulikki Unelma" ]
 edition = "2021"
+authors = ["Tuulikki Unelma <tuulikki.unelma@proton.me>"]
 
 [dependencies]
 serde = { version = "^1.0", features = ["derive"] }
